# aivocado

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ai_advisor.py  api_client.py  display.py  main.py  pyproject.toml  requirements.txt  sensors.py
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_ai_advisor.py  test_api_client.py  test_display.py  test_sensors.py
